force-app/main/default/objects/ATI_Job_Team__c/ATI_Job_Team__c.object-meta.xml
<CustomObject>
    <label>Job Team</label>
    <nameField>
        <displayFormat>JobTeam -{000000}</displayFormat>
        <label>ATI Job Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Team</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>