force-app/main/default/objects/ATI_Job_Team__c/fields/ATI_Job__c.field-meta.xml
<CustomField>
    <fullName>ATI_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ATI Job</label>
    <referenceTo>ATI_Job__c</referenceTo>
    <relationshipLabel>Job Team</relationshipLabel>
    <relationshipName>ATI_Jobs_Team</relationshipName>
    <type>Lookup</type>
</CustomField>