force-app/main/default/objects/ATI_Job_Team__c/fields/Team_Member_Role__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Role__c</fullName>
    <label>Member Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Executive 1</fullName>
            </value>
            <value>
                <fullName>Account Executive 2</fullName>
            </value>
            <value>
                <fullName>Regional Manager</fullName>
            </value>
            <value>
                <fullName>Collector</fullName>
            </value>
            <value>
                <fullName>Operations Manager</fullName>
            </value>
            <value>
                <fullName>Opportunity Owner</fullName>
            </value>
            <value>
                <fullName>Project Director</fullName>
            </value>
            <value>
                <fullName>Superintendent</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Job Owner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>