force-app/main/default/objects/ATI_Job_Team__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ATI_Jobs_Team</relationshipName>
    <type>Lookup</type>
</CustomField>